--- a/src/NEWS
+++ b/src/NEWS
@@ -1,4 +1,4 @@
-v3.1.9 (2024-11-29)
+v3.1.9 (2024-12-10)
 	-- build and packaging:
 		- libyuv 0.1878.20231004
 		- packaging updates for CentOS7: libyuv, skip pycuda
@@ -25,6 +25,9 @@ v3.1.9 (2024-11-29)
 		- handle decoding of padded frames
 		- quality and speed can be used with all generic encodings
 		- clamp vrefresh to a useful range
+		- quality and speed disabled when encoding set to 'auto'
+		- support newer versions of python-pillow
+		- 10 bit per channel issues
 	-- major:
 		- protect against potential buffer overflows
 		- MS Windows printing crash
