--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,7 +1,31 @@
 xpra (5.0.12-1) UNRELEASED; urgency=low
-  * TODO
+  * Platforms, build and packaging:
+   - MSYS2 aarch64 build fix and prefix detection
+   - RPM support for per-arch cuda pkgconfig
+  * SBOM:
+   - minor fixes
+   - record CUDA
+   - record 'Light' builds
+   - export to JSON
+   - fallback to `pip` package data
+  * Major:
+   - `SSL` upgrades discard options
+   - use symlinks to prevent ssh agent forwarding setup errors
+  * Encodings:
+   - `rgb` errors at unusual bit depths
+   - transparency detection with 10-bit per channel windows
+   - use `pillow` encoder for 10-bit per channel pictures
+   - pillow encoder fixes
+   - missing options when encoding is set to `auto` from the system tray menu
+   - system tray speed control not available
+  * Minor:
+   - `quic` connections are safe for authentication
+   - `start-gui` fails if no application is selected
+   - check for latest version from current branch
+   - clamp `vrefresh` to a useful range
+   - proxy error messages formatting
 
- -- Antoine Martin <antoine@xpra.org>  Fri, 29 Nov 2024 20:34:37 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 10 Dec 2024 21:14:55 +0700
 
 xpra (5.0.11-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
