--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.2.3-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Thu, 19 Dec 2024 15:30:36 +0700
+
 xpra (6.2.2-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     MSYS2 aarch64 build fix and prefix detection
