update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,7 +1,37 @@
 xpra (6.2.3-1) UNRELEASED; urgency=low
-  * TODO
+  * Platforms, build and packaging:
+    pillow 11.1.0
+    `exe` installer standalone step
+    handle diverging RHEL clone packaging behaviour
+    move default package list for newer build script default
+  * RHEL 10 builds:
+    package Qt6 client
+    use `weston` + `Xwayland` as xvfb on RHEL 10
+    provide wrapper script for `weston` + `Xwayland`
+    replace `noopenh264` with `openh264`
+    `AlmaLinux` `10-kitten` package list
+    `CentOS` `stream10` package list
+  * Major:
+    Network Manager API errors in some environments
+    websocket connection loss with some proxies sending empty payloads
+    handle broken `pyopengl-accelerate` installations more gracefully
+  * Clipboard:
+    always claim the clipboard selection when updated
+    always update the peer when the owner changes
+  * Desktop mode:
+    better compatibility with some window managers when resizing
+    handle fixed size desktops correctly
+  * Minor:
+    hide 'configure shadow server' on light builds
+    typo in `nvjpeg` encoder / decoder build switches
+    `libexec` scripts installed twice
+    icon glob lookup mismatch
+    division by zero on MS Windows
+    update keyboard layout mapping for `ku` and `ir`
+  * Cosmetic:
+    `openh264` license tag
 
- -- Antoine Martin <antoine@xpra.org>  Thu, 19 Dec 2024 15:30:36 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 07 Jan 2025 14:11:08 +0700
 
 xpra (6.2.2-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
