update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -2,15 +2,32 @@ xpra (5.0.12-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
    - MSYS2 aarch64 build fix and prefix detection
    - RPM support for per-arch cuda pkgconfig
+   - `exe` installer standalone step
+   - move default package list for newer build script default
   * SBOM:
    - minor fixes
    - record CUDA
    - record 'Light' builds
    - export to JSON
    - fallback to `pip` package data
+  * RHEL 10:
+   - package list
+   - provide wrapper script for `weston` + `Xwayland`
+   - use `weston` + `Xwayland` as `xvfb` option
+   - pycairo build fix
+   - no `pandoc` or `x264`
+   - do build `libfakeXinerama`
   * Major:
    - `SSL` upgrades discard options
    - use symlinks to prevent ssh agent forwarding setup errors
+   - websocket connection loss with some proxies sending empty payloads
+   - Network Manager API errors in some environments
+  * Desktop mode:
+   - better compatibility with some window managers when resizing
+   - handle fixed size desktops correctly
+  * Clipboard:
+   - always claim the clipboard selection when updated
+   - always update the peer when the owner changes
   * Encodings:
    - `rgb` errors at unusual bit depths
    - transparency detection with 10-bit per channel windows
@@ -23,9 +40,16 @@ xpra (5.0.12-1) UNRELEASED; urgency=low
    - `start-gui` fails if no application is selected
    - check for latest version from current branch
    - clamp `vrefresh` to a useful range
+   - division by zero on MS Windows
+   - typo in nvjpeg encoder / decoder build switches
+  * Cosmetic:
    - proxy error messages formatting
+   - remove superfluous logging
+   - don't log scary warning about missing `numpy_formathandler`
+   - unset load-balancer CUDA option is valid
+   - icon glob lookup mismatch
 
- -- Antoine Martin <antoine@xpra.org>  Tue, 10 Dec 2024 21:14:55 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 07 Jan 2025 14:27:23 +0700
 
 xpra (5.0.11-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
