--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -5,6 +5,7 @@ xpra (6.2.3-1) UNRELEASED; urgency=low
     handle diverging RHEL clone packaging behaviour
     move default package list for newer build script default
     invalid refresh rate detected on some MS Windows configurations
+    normalize smooth scroll wheel values on macos
   * RHEL 10 builds:
     package Qt6 client
     use `weston` + `Xwayland` as xvfb on RHEL 10
@@ -17,6 +18,9 @@ xpra (6.2.3-1) UNRELEASED; urgency=low
     websocket connection loss with some proxies sending empty payloads
     handle broken `pyopengl-accelerate` installations more gracefully
     keyboard layout group regression
+  * Encodings:
+    batch delay increase compounded
+    avoid damage storms: switch to full frames earlier
   * Clipboard:
     always claim the clipboard selection when updated
     always update the peer when the owner changes
@@ -36,11 +40,14 @@ xpra (6.2.3-1) UNRELEASED; urgency=low
     update keyboard layout mapping for `ku` and `ir`
     avoid lowering quality for `text` content type, avoid scaling and subsampling
     avoid potential logging loop
+    close splash screen on server start error
   * Cosmetic:
     `openh264` license tag
     remove outdated Wayland clipboard warning
     typo
     strict mode type mismatch
+    incorrect compression debug logging
+    incorrect damage elapsed time in debug logging
 
  -- Antoine Martin <antoine@xpra.org>  Tue, 14 Jan 2025 13:53:12 +0700
 
