add some release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,5 +1,34 @@
 xpra (6.3-1) UNRELEASED; urgency=low
-  * TODO
+  * Platforms, build and packaging:
+    rewritten MS Windows build script
+    `RHEL` 10 and clones
+    `weston` + `Xwayland` option for `xvfb`
+    per-branch version check
+    test tk client
+    test pyglet client
+    remove copyright end years
+  * Configuration:
+    `xvfb` aliases
+    easily modify settings
+  * Features:
+    server power events
+    ibus keyboard layouts
+    specify refresh rate range
+    save selection in run dialog
+    `OpenGL` `YUVA` support for `jpeg` with alpha
+  * Network:
+    `hyperv` connections
+    `nginx` proxy documentation
+    `http-header` authentication module
+    option for trusting connections
+    reusable authentication modules
+    reusable control commands
+    validate quic headers
+    `AES` fixes
+  * Improvements:
+    skip unused slow imports
+    avoid loading `numpy` unnecessarily
+
 
  -- Antoine Martin <antoine@xpra.org>  Sun, 13 Oct 2024 18:49:42 +0700
 
