--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,15 @@
+xpra (6.2.4-1) UNRELEASED; urgency=low
+  * Platforms, build and packaging:
+    MS Windows custom build arguments
+    EXE manigests optional
+    EXE installer must overwrite previous version, all libraries
+    `rpmspec` warnings
+    `dev-env` subcommand errors on Debian systems
+  * Network:
+    scary warnings when RDP clients attempt to connect
+
+ -- Antoine Martin <antoine@xpra.org>  Thu, 23 Jan 2025 10:20:39 +0700
+
 xpra (6.2.3-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     pillow 11.1.0
