--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (5.1-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Thu, 23 Jan 2025 21:08:41 +0700
+
 xpra (5.0.12-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
    - MSYS2 aarch64 build fix and prefix detection
