--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (5.0.13-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Tue, 28 Jan 2025 11:01:03 +0700
+
 xpra (5.0.12-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
    - MSYS2 aarch64 build fix and prefix detection
