--- a/fs/share/man/man1/xpra.1
+++ b/fs/share/man/man1/xpra.1
@@ -1470,6 +1470,10 @@ Tells the server to process all keyboard input untranslated.
 Both the client and the server must be using the same type of keyboard
 interface. (ie: both using X11)
 .TP
+\fB\-\-keyboard\-backend\fP=\fIBACKEND\fP
+The keyboard backend is normally detected automatically.
+This option overrides it.
+.TP
 \fB\-\-keyboard\-layout\fP=\fILAYOUTSTRING\fP
 The keyboard layout is normally detected automatically.
 This option overrides it.
@@ -1632,7 +1636,7 @@ When you use an \fBssh:\fP address to connect to a remote display,
 xpra runs \fBssh\fP(1) to make the underlying connection.
 Most installations should now be using \fBparamiko\fP as default backend command.
 Another common value for \fBCMD\fP is \fBssh\fP or \fBplink\fP on Microsoft
-Windows. 
+Windows.
 If your ssh program is in
 an unusual location, has an unusual name, or you want to pass special
 options to change ssh's behavior, then you can use the \fB\-\-ssh\fP
