--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -8,23 +8,37 @@ xpra (6.2.4-1) UNRELEASED; urgency=low
     also prefer the CUDA arch specific pkgconfig file for nvdec
     CUDA kernel build errors with CUDA 12.8 and Fedora 41
     PyOpenGL 3.1.9
+    add Fedora 42 with Python 3.14 and Ubuntu Plucky, remove Fedora 39 and Ubuntu Lunar
+    PyCUDA 2025.1
+    build pycuda on Fedora 40
+    Cython 3.0.12
+    `libexec` scripts installation into a prefix
+    detect MS Windows version for all codepages
   * Major:
     integer time overflow, prevent more
     server fails to start when sourcing profile strings
     qp calculation with nvenc
+    encoder runtime factor was not being honoured
   * Network:
     scary warnings when RDP clients attempt to connect
-  * Minor:
     limit openssl version details exposed
+    strip comments from paramiko configs
+  * Minor:
     revert to other client's ssh agent socket on disconnection
     partial dpi settings with some clients (ie: `html5`)
+    codec error handling
   * Cosmetic:
     make it easier to cut & paste the CUDA kernel compilation command
     unnecessary import
     linter warning
     update module path in message
+    handle missing version more gracefully
+    hide unnecessary info / when desired
+    correct encoder state displayed
+    remove deprecated syntax
+    DPI documentation link
 
- -- Antoine Martin <antoine@xpra.org>  Sun, 09 Feb 2025 22:53:29 +0700
+ -- Antoine Martin <antoine@xpra.org>  Wed, 19 Feb 2025 18:06:45 +0700
 
 xpra (6.2.3-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
