update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -15,12 +15,18 @@ xpra (6.2.4-1) UNRELEASED; urgency=low
     Cython 3.0.12
     `libexec` scripts installation into a prefix
     detect MS Windows version for all codepages
+    don't enable splash unconditionally on non-posix
   * Major:
     integer time overflow, prevent more
     server fails to start when sourcing profile strings
+    disable 'DOUBLE-BUFFER' extension
+  * Encodings:
     qp calculation with nvenc
     encoder runtime factor was not being honoured
-    disable 'DOUBLE-BUFFER' extension
+    disable video decoders when they fail
+    nvdec cleanup errors
+    avoid cuda context error messages when not installed
+    codec error handling
   * Network:
     scary warnings when RDP clients attempt to connect
     limit openssl version details exposed
@@ -28,7 +34,6 @@ xpra (6.2.4-1) UNRELEASED; urgency=low
   * Minor:
     revert to other client's ssh agent socket on disconnection
     partial dpi settings with some clients (ie: `html5`)
-    codec error handling
   * Cosmetic:
     make it easier to cut & paste the CUDA kernel compilation command
     unnecessary import
@@ -39,8 +44,9 @@ xpra (6.2.4-1) UNRELEASED; urgency=low
     correct encoder state displayed
     remove deprecated syntax
     DPI documentation link
+    unit tests log cuda errors
 
- -- Antoine Martin <antoine@xpra.org>  Fri, 21 Feb 2025 00:38:01 +0700
+ -- Antoine Martin <antoine@xpra.org>  Sat, 22 Feb 2025 21:49:21 +0700
 
 xpra (6.2.3-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
