--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -41,6 +41,7 @@ xpra (6.2.4-1) UNRELEASED; urgency=low
   * Minor:
     revert to other client's ssh agent socket on disconnection
     partial dpi settings with some clients (ie: `html5`)
+    only re-initialize encodings on update message
   * Cosmetic:
     make it easier to cut & paste the CUDA kernel compilation command
     unnecessary import
@@ -53,7 +54,7 @@ xpra (6.2.4-1) UNRELEASED; urgency=low
     DPI documentation link
     unit tests log cuda errors
 
- -- Antoine Martin <antoine@xpra.org>  Sun, 01 Mar 2025 21:58:01 +0700
+ -- Antoine Martin <antoine@xpra.org>  Mon, 03 Mar 2025 18:46:02 +0700
 
 xpra (6.2.3-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
