--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -9,7 +9,12 @@ xpra (6.3-1) UNRELEASED; urgency=low
     remove copyright end years
   * Configuration:
     `xvfb` aliases
+    configure `xvfb` dialog
     easily modify settings
+  * Encodings:
+    AMD AMF encoder
+    encoder server
+    avoid subsampling in lossless mode
   * Features:
     server power events
     ibus keyboard layouts
@@ -17,6 +22,7 @@ xpra (6.3-1) UNRELEASED; urgency=low
     save selection in run dialog
     `OpenGL` `YUVA` support for `jpeg` with alpha
   * Network:
+    bi-directional `mmap`
     `hyperv` connections
     `nginx` proxy documentation
     `http-header` authentication module
@@ -29,7 +35,7 @@ xpra (6.3-1) UNRELEASED; urgency=low
     skip unused slow imports
     avoid loading `numpy` unnecessarily
 
- -- Antoine Martin <antoine@xpra.org>  Sun, 13 Oct 2024 18:49:42 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 04 Mar 2025 17:31:09 +0700
 
 xpra (6.2.0-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
