--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.2.5-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Wed, 05 Mar 2025 23:29:30 +0700
+
 xpra (6.2.4-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     MS Windows custom build arguments
