update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,7 +1,26 @@
 xpra (6.2.5-1) UNRELEASED; urgency=low
-  * TODO
+  * Platforms, build and packaging:
+    MS Windows authentication usernames are not case sensitive
+    don't log authentication credentials
+    `signtool.exe` build errors
+    allow all build commands to be placed in the cwd
+    missing PyQT6 in the non-light MS Windows builds
+    better build defaults for `arm64` MS Windows builds
+    Fedora 42 mangled dependencies
+    `pyu2f` incorrect Python version dependency
+    add explicit Python dependencies to python libraries
+  * Major:
+    nvidia hardware detection errors
+    honour ssl options in launcher files
+  * Encodings:
+    faded colours with `openh264` decoder
+  * Cosmetic:
+    audio warnings showing placeholders
+    improved ssl error message
+    show connection step in splash progress
+    typo in RPM changelog
 
- -- Antoine Martin <antoine@xpra.org>  Wed, 05 Mar 2025 23:29:30 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 11 Mar 2025 17:01:18 +0700
 
 xpra (6.2.4-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
