--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,26 @@
+xpra (6.2.6-1) UNRELEASED; urgency=low
+  * Platforms, build and packaging:
+    prevent legacy build script from being used
+    pam headers path have changed
+    named-pipe shutdown errors
+    Debian dependency on `setuptools` for building with Python 3.13 or later
+  * Minor:
+    environment variable override returned invalid type, rename it
+    fail faster if Xvfb process terminates
+    preserve option types
+    fix parsing of keyboard options specified as lists
+    failure to generate connection qrcodes
+  * Cosmetic:
+    disable menu entries that are not available
+    custom window cursors should not apply to the header bar
+    platform name duplicated
+    don't paint window border corners twice
+    clarify `auth` option scope
+    more graceful handling of invalid configuration module names
+    sort shortcuts
+
+ -- Antoine Martin <antoine@xpra.org>  Mon, 31 Mar 2025 21:17:34 +0700
+
 xpra (6.2.5-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     MS Windows authentication usernames are not case sensitive
