--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.4-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Mon, 31 Mar 2025 21:45:48 +0700
+
 xpra (6.3-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     rewritten MS Windows build script
