--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -20,6 +20,7 @@ xpra (5.1-1) UNRELEASED; urgency=low
    - Ubuntu Oracular package name revert
    - Debian distributions with Python >= 3.13 need `setuptools`
    - `pam_misc` upgrade breaks include path
+   - don't enable nvidia codecs on riscv64
   * New features:
    - keycloak authentication module
   * Encodings:
@@ -44,6 +45,8 @@ xpra (5.1-1) UNRELEASED; urgency=low
    - revert to other client's ssh agent socket on disconnection
    - only re-initialize encodings on update message
    - environment variable override returned invalid type
+   - error generating QR code URLs
+   - window info window not showing
   * Cosmetic:
    - fail faster if Xvfb process terminates
    - show connection step in splash screen progress
@@ -58,6 +61,8 @@ xpra (5.1-1) UNRELEASED; urgency=low
    - duplicated platform name
    - silence warnings when parsing newer (>= v6.3) configuration files
    - cursors should not apply to the headerbar
+   - easier debug logging of key network events
+   - warn against using AES in this branch
 
  -- Antoine Martin <antoine@xpra.org>  Sun, 30 Mar 2025 18:35:08 +0700
 
