update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -21,6 +21,8 @@ xpra (6.3-1) UNRELEASED; urgency=low
     specify refresh rate range
     save selection in run dialog
     `OpenGL` `YUVA` support for `jpeg` with alpha
+    save `OpenGL` probe result
+    make the window menu more easily accessible
   * Network:
     bi-directional `mmap`
     `hyperv` connections
