--- a/fs/share/man/man1/xpra.1
+++ b/fs/share/man/man1/xpra.1
@@ -30,6 +30,7 @@ xpra \- viewer for remote, persistent X applications
 \fBxpra\fP \fBstop\fP | \fBxpra\fP \fBexit\fP | \fBxpra\fP \fBdetach\fP |
 \fBxpra\fP \fBscreenshot\fP \fIfilename\fP | \fBxpra\fP \fBversion\fP |
 \fBxpra\fP \fBinfo\fP [CONNECTIONSTRING] |
+\fBxpra\fP \fBid\fP [CONNECTIONSTRING] |
 \fBxpra\fP \fBtop\fP [CONNECTIONSTRING]
 [\fBOPTIONS..\fP]
 .HP
@@ -309,8 +310,12 @@ Note: screenshots can only be taken when a client is attached.
 .SS xpra version
 Queries the server version and prints it out.
 Note: older servers may not support this feature.
+.SS xpra id
+Queries the server for basic information like server pid, uuid, etc
+This is normally even available prior to authentication.
+This command returns 0 if the server responded.
 .SS xpra info
-Queries the server for version, status and statistics.
+Queries the server for full version, status and statistics.
 .SS xpra top
 Shows the server's key health attributes.
 .SS xpra control
@@ -409,7 +414,7 @@ others, potentially serving as a load balancing or authentication
 entry point for many sessions.
 The proxy server will spawn a new process for each proxy connection,
 this proxy process will create an unauthenticated new unix domain socket
-which can be used with the subcommands \fBinfo\fP, \fBversion\fP and
+which can be used with the subcommands \fBid\fP, \fBinfo\fP, \fBversion\fP and
 \fBstop\fP.
 
 .SS Important Note
