--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (5.1.1-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Mon, 14 Apr 2025 21:56:11 +0700
+
 xpra (5.1-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
    - prefer CUDA arch specific pkg-config file for `nvdec`
