--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,3 +1,8 @@
+xpra (6.3.1-1) UNRELEASED; urgency=low
+  * TODO
+
+ -- Antoine Martin <antoine@xpra.org>  Sun, 27 Apr 2025 19:22:51 +0700
+
 xpra (6.3-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
     rewritten MS Windows build script
