--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -1,7 +1,27 @@
 xpra (6.3.1-1) UNRELEASED; urgency=low
-  * TODO
+  * Platforms, build and packaging:
+    modular installations also need filesystem package
+    add plucky for `install-repo` subcommand
+    make it easier to run unit tests with extra cythonization
+    add explicit weak dependency on notification library
+  * Minor:
+    only resume audio if it was suspended
+    wait before retrying socket
+    `root` does not have magical powers
+    read-only `$HOME` should not be fatal
+    start command failures via control channel when exec-wrapper is used
+    only resume audio if it was suspended
+    keys used to break the `moveresize` should not propagate
+    handle missing configuration directories more gracefully
+    show display access errors
+    Xephyr startup errors without geometry
+  * Cosmetic:
+    avoid tray errors when connection fails
+    missing OpenGL error message
+    type hint fixes: `mmap`, vfb log
+    `mmap` madvise platform support detection
 
- -- Antoine Martin <antoine@xpra.org>  Sun, 27 Apr 2025 19:22:51 +0700
+ -- Antoine Martin <antoine@xpra.org>  Tue, 06 May 2025 22:41:34 +0700
 
 xpra (6.3-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
