update the release notes

--- a/packaging/debian/xpra/changelog
+++ b/packaging/debian/xpra/changelog
@@ -8,12 +8,16 @@ xpra (6.3.1-1) UNRELEASED; urgency=low
     recommend `xpra-x11` package so `xpra` installs working servers on Debian
     `XWayland` is a valid xvfb backend
   * Major:
+    missing some authentication handlers in MS Windows binaries
+    error connecting to display `:0` in ssh mode
     `pam` authentication fails
     parsing of `NET_WM_STRUT` on 64-bit systems
     don' upgrade when `ssl` is disabled
     desktop geometry attributes not always updated
     ignore obsolete X11 size hints
   * Minor:
+    shadow servers don't stop the refresh loop
+    opaque-region parsing errors
     only resume audio if it was suspended
     wait before retrying socket
     `root` does not have magical powers
@@ -35,7 +39,15 @@ xpra (6.3.1-1) UNRELEASED; urgency=low
     encoder server should default to having sharing enabled
     encoder server failures when lz4 is not enabled
     `mmap` cannot be used to send 8-bit data
+    disable `scroll` encoding due to visual corruption
+    `openh264` encoder not using default settings
+    `openh264` encoder should set `full-range` metadata for native stream decoders
+    `openh264` codecs not preserving full-range metadata
+    `libyuv` losing `full-range` metadata attribute during scaling
+    `vp9` encoder should expose `full-range` attribute
   * Cosmetic:
+    handle missing module more gracefully
+    handle missing gui component more gracefully
     avoid tray errors when connection fails
     missing OpenGL error message
     type hint fixes: `mmap`, vfb log
@@ -47,8 +59,10 @@ xpra (6.3.1-1) UNRELEASED; urgency=low
     control command client validation errors
     improve `exit-with-children` error message
     also debug internal properties
+    incorrect type hint
+    log connection details with the channel warning
 
- -- Antoine Martin <antoine@xpra.org>  Mon, 26 May 2025 23:22:46 +0700
+ -- Antoine Martin <antoine@xpra.org>  Sat, 31 May 2025 23:33:14 +0700
 
 xpra (6.3-1) UNRELEASED; urgency=low
   * Platforms, build and packaging:
